<!--
  ~ Copyright (c) 2023.
  ~
  ~ Project Name: Trabajo Final
  ~ Created by Eddi Andres Garcia
  ~ Copyright (c) 2023. All rights reserved.
  ~ Last modified 1/10/23 23:05
  -->
<!-- ESTE ES EL LISTAD DE LAS PALABRAS QUE VOY A UTILIZAR EN MI APP TRABAJO FINAL -->
<resources>
    <!-- Palabras para Saludo App -->
    <string name="app_name">Trabajo Final</string>
    <string name="pulsame">Pulsame</string>

    <!-- Palabras para IMC App -->
    <string name="regresar">Regresar</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="symFemale">Symbolo Femenino</string>
    <string name="symMale">Symbolo Masculino</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="result">Resultado</string>
    <string name="result_imc">El Resultado es:</string>
    <string name="recalculate">Recalculcular</string>
    <string name="error">Error</string>
    <string name="title_peso_bajo">Bajo Peso</string>
    <string name="summary_peso_bajo">Te encuentras por debajo de lo óptimo para tu peso y estatura.</string>
    <string name="title_normal_peso">Normal</string>
    <string name="summary_normal_bajo">Te encuentras en lo óptimo para tu peso y estatura.</string>
    <string name="title_sobrepeso_peso">Sobrepeso</string>
    <string name="summary_sobrepeso_bajo">Te encuentras por encima de lo óptimo para tu peso y estatura.</string>
    <string name="title_obecidad">Obecidad</string>
    <string name="summary_obecidad">Te encuentras MUY por encima de lo óptimo para tu peso y estatura.</string>
    <string name="init_message">Este espacio esta reservado para proximas MiniApp`s que vaya creando durante mi aprendizaje.</string>
    <string name="saludo_app">Saludo App</string>
    <string name="imc_app">IMC App</string>
    <string name="heroes_app">Super Heroes App</string>
    <string name="init_cm">120 cm</string>

    <!-- Palabras para Heroes App -->
    <string name="intelligence">Inteligencia</string>
    <string name="strength">Fortaleza</string>
    <string name="speed">Velocidad</string>
    <string name="durability">Durabilidad</string>
    <string name="power">Fuerza</string>
    <string name="combat">Combate</string>
    <string name="real_name">Nombre real:</string>
    <string name="hero_publisher">Editorial:</string>
    <string name="hero_ocupation">Ocupación:</string>
    <string name="hero_base">Ciudad:</string>
    <string name="hero_birth">Lugar de nacimiento:</string>
</resources>